crates/hir-ty/tests/snapshots/jls_false_flags__multi_dim_raw_array_unchecked_conversion.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.ArrayList;
import java.util.List;

class Body {
    List<String>[][] foo() {
        ArrayList[][] arrayListArrayArray = new ArrayList[1][];
        return arrayListArrayArray;
    }
}

method foo(): java.util.List<java.lang.String>[][]
  locals: l0: java.util.ArrayList[][]
  exprs: e0: int | e1: java.util.ArrayList[][] | e2: java.util.ArrayList[][]
