crates/hir-ty/tests/snapshots/jls_false_flags__raw_array_unchecked_conversion.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    static class Frame<T> {
    }
    Frame<String>[] m() {
        Frame<String>[] f = new Frame[7];
        return f;
    }
}

method m(): com.example.Body.Frame<java.lang.String>[]
  locals: l0: com.example.Body.Frame<java.lang.String>[]
  exprs: e0: int | e1: com.example.Body.Frame[] | e2: com.example.Body.Frame<java.lang.String>[]
