crates/hir-ty/tests/snapshots/jls_false_flags__restricted_identifier_method_names.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    private void record(int x, int y) {}
    private void sealed() {}
    private void permits() {}
    private int record;
    void m(int a) {
        record(a, a);
        sealed();
        permits();
    }
}
