crates/hir-ty/tests/snapshots/jls_false_flags__static_final_written_from_instance_context.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    static final int sf;
    static {
        sf = 1;
    }
    Final() {
        sf = 2;
    }
}

method Final(): <init>
  @8:8..8:10 'sf': cannot-assign-to-final-variable: Cannot assign a value to final variable 'sf'
